# differential-rs

./: Cargo.toml  README.md
examples/: a.rs  a.rs_  b.rs
src/: alias.rs  containers.rs  derivatives.rs  dim.rs  impls.rs  lib.rs  storage.rs  utils.rs
src/impls/: approx_impl.rs  nalgebra.rs  num_traits_impl.rs  std_ops.rs
src/impls/std_ops/: add.rs  comp.rs  div.rs  mul.rs  rem.rs  sub.rs
