[package]
name = "differential"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
nalgebra = "0.32.2"
approx = "0.5.1"

[features]
default = [
    #"generic_const_exprs"
]
generic_const_exprs = []


# TODO use [features]

[profile.release]
#debug = true
#lto = true